--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@ language: node_js
 node_js:
   - "8"
 
-install:
-  - npm install -g csslint
-  - npm install -g jshint
-
 jobs:  
   include:
     - stage: "js"
+      install: npm install -g jshint
       script: jshint static/js
     - stage: "css"
+      install: npm install -g csslint
       script: csslint static/css
