--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,11 @@ insert_final_newline = true
 charset = utf-8
 
 # 4 space indentation
+[*.py]
+indent_style = space
+indent_size = 4
+
+# 4 space indentation
 [*.html]
 indent_style = space
 indent_size = 4
